Add from, until and limit predicates to list runs operation
