# pkg/rpc/controlplane/service.swagger.json
@@ -26,6 +26,29 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "from_ns",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "until_ns",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
         "tags": [
           "ControlPlane"
         ]
@@ -42,6 +65,29 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "from_ns",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "until_ns",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
         "tags": [
           "ControlPlane"
         ]
